Correção automática do AI Hub